Made inventory scrollable to prevent overflow

--- a/HarvestGame/src/main/resources/css/styles.css
+++ b/HarvestGame/src/main/resources/css/styles.css
@@ -20,3 +20,8 @@
     -fx-text-fill: white;
     -fx-padding: 10px;
 }
+
+.plot {
+    -fx-background-color: sienna;
+    -fx-border-color: maroon;
+}
